--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Hello world</h1>
-    
+        <nav>
+                <div class="nav-wrapper pink">
+                  <a href="#" class="brand-logo">Logo</a>
+                  <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="sass.html">Products</a></li>
+                    <li><a href="sass.html">Advice</a></li>
+                    <li><a href="badges.html">Services</a></li>
+                    <li><a href="collapsible.html">Contact</a></li>
+                  </ul>
+                </div>
+              </nav>
+
+
+    <h1>Hello world!</h1>
+
+
+     <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </body>
+
 </html>
